[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#shared = { path="../shared" }
itertools = "0.10.5"
reqwest = { version="0.11.13", features = ["blocking"] }
regex = "1.7.0"
rayon = "1.6.1"
ahash = "0.8.2"